cabal-version:       2.4

name:                five
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Five
  build-depends:       base ^>=4.13.0.0
                     , containers >=0.6
                     , deepseq >=1.4
                     , parsers
                     , text >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
